Update to build on Java 25